--- a/index.html
+++ b/index.html
@@ -6,17 +6,44 @@
 <meta charset=”UTF-8”>
 
 <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
-<title> Hannah Fondaw | Contact Page        </title>
-
+<title> Hannah Fondaw Contact Page        </title>
+<link rel="stylesheet" type="text/css" href="styles-contact.css">
 </head>
-
+h1{
+    font-family: fieldwork, sans-serif;
+    font-size: 2em;
+    margin: 0px auto 10px auto;
+    color: #fff,
+ }
+h2{
+    font-family: fieldwork, sans-serif;
+    font-size: 1.5em;
+    line-height: 1.4;
+    color: #fff;
+    padding: 0px 0px;
+    margin: 0px auto 25px auto
+}
+p{
+    font-family: fieldwork, sans-serif;
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #fff;
+}
 <body>
-<div class="center">
-<img id="logo" src="sing logo 2x" alt="Sing Studio Logo" width="600">
-<h1>Hello, welcom to my Contact Page.<br> This is an h1 heading.</h1>
-<h2>This is an h2 heading</h2>
-<p>This is a paragraph, you'll notice it's smaller.</p>
-</div> <!---end of center div-->
 
+
+<div class="center">
+    <img id="logo" src="images/sing logo 2x.png" alt="Sing Studio logo" width="600">
+<h1>This is a placeholder for my main text</h1>
+<h2>This is a placeholder for a subhead or signature.</h2>
+<p>This is a paragraph, you'll notice it's smaller.</p>
+
+<nav>
+    <ul>
+        <li><a href="mailto:hfondaw@calpoly.edu"> Email Me</a></li>
+    </ul>
+</nav>
+</div>div> <!--end of center div-->
 </body>
+
 </html>
